Update project for tests. Add to CustomGameMessages. Add to CustomGoalsMessages